# KEVGraph

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  claude_cli.py  push_all.sh  pyproject.toml  requirements.txt
_backup/: results.csv
data/: curated_repos.txt  evaluation.json  fixes.json  kev_vuln_ranks.csv  manifest.csv  random_ci.json  repo_pool.json  scalability.csv  stratified_aucc.csv  vulns.json
data/kev_scan/: kev_density.csv  kev_positive_repos.txt  kev_zero_repos.txt
data/maven/: evaluation.json  fixes.json  manifest.csv  random_ci.json  results.csv  vulns.json
data/maven/graphs/: 60secondAppsAI__testapp1202-0001.graphml  Aiden-leee__mypharm.graphml  AlbaneCar__AlphaPlan.graphml  Aleinek__Go_Game.graphml  Algezz__sis2.graphml  AyoHandGod__UserSignIn.graphml  BountySecurity__BountyPrompt.graphml  HuyHoang091__game.graphml  (+98 more)
data/pypi/: evaluation.json  fixes.json  manifest.csv  random_ci.json  results.csv  vulns.json
paper/: kevgraph.aux  kevgraph.out  kevgraph.tex
scripts/: consolidate_snapshot.py  epss_failure_analysis.py  reproduce.sh  scalability_benchmark.py  scale_dataset.py  stratified_aucc.py
src/: baselines.py  cache.py  candidate_fixes.py  collect_repos.py  config.py  fetch_lockfiles.py  figures.py  find_kev_positive.py  metrics.py  osv_kev_join.py  parse_lockfile.py  pipeline.py  planner_greedy.py  planner_ilp.py  plotting.py  rate_limit.py
src/ecosystems/: __init__.py  base.py  maven.py  npm.py  pypi.py
tests/: test_core.py  test_maven.py  test_pypi.py
(+520 files in other folders)
