[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kevgraph"
version = "0.1.0"
description = "KEVGraph: prioritised dependency remediation via CISA KEV and OSV"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31,<3",
    "networkx>=3.2,<4",
    "pandas>=2.1,<3",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "pulp>=2.7,<3",
    "tqdm>=4.66,<5",
    "packaging>=23.2,<25",
    "tenacity>=8.2,<10",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.3"]

[project.scripts]
kevgraph = "src.pipeline:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
